Adding an API key file and putting imported tools into their own section on the tool menu.

--- a/roles/galaxyprojectdotorg.devbox/templates/dev_tool_conf.xml.j2
+++ b/roles/galaxyprojectdotorg.devbox/templates/dev_tool_conf.xml.j2
@@ -1,4 +1,6 @@
 <?xml version="1.0"?>
 <toolbox tool_path="{{ dev_tool_conf_dir }}">
-	<tool_dir dir="." />
+	<section id="imported" name="Imported Tools">
+		<tool_dir dir="." />
+	</section>
 </toolbox>
