--- a/roles/dream-smc-client/templates/galaxy_lib_sync.py.j2
+++ b/roles/dream-smc-client/templates/galaxy_lib_sync.py.j2
@@ -93,6 +93,23 @@ class LibrarySync:
             if elem['type'] == 'file' and elem['name'] == file_name:
                 dataset_id = elem['id']
         return dataset_id
+    
+    def get_library_folder_id(self, library_id, folder):
+        dataset_id = None
+        file_name = os.path.abspath(folder)
+        for elem in self.remote_galaxy.get("/api/libraries/%s/contents" % (library_id)):
+            if elem['type'] == 'folder' and elem['name'] == file_name:
+                dataset_id = elem['id']
+        return dataset_id
+    
+    def library_make_folder(self, parent_folder_id, name, description=""):
+        data = {}
+        data[ 'folder_id' ] = parent_folder_id
+        data[ 'name' ] = name
+        data[ 'create_type' ] = 'folder'
+        data[ 'description' ] = description
+        libset = self.remote_galaxy.post("/api/libraries/%s/contents" % self.library_id, data)
+        return libset
 
     def library_paste_file(self, library_folder_id, name, datapath, meta=None):
         data = {}
@@ -109,18 +126,33 @@ class LibrarySync:
         libset = self.remote_galaxy.post("/api/libraries/%s/contents" % self.library_id, data)
         return libset
 
+def sync_dir(lsync, api_key, api_url, data_dir, library_id, library_folder):
+    print "Syncing: %s" % (data_dir)
+    library_folder_id = lsync.get_library_folder_id(library_id, library_folder)
+    if library_folder_id is None:
+        raise Exception("Unable to find folder: %s" % (library_folder))
+    for file_path in glob( os.path.join(os.path.abspath(data_dir), "*") ):
+        if os.path.isfile(file_path):
+            dataset_name = os.path.basename(file_path)
+            ldda_id = lsync.get_library_dataset_id(library_id, library_folder, dataset_name)
+            if ldda_id is None:
+                new_ent = lsync.library_paste_file(library_folder_id, dataset_name, file_path)
+                print new_ent
+            else:
+                print "Skipping %s" % (os.path.join(library_folder, dataset_name))
+        elif os.path.isdir(file_path):
+            dir_name = os.path.basename(file_path)
+            child_folder = os.path.join(library_folder, dir_name)
+            ldda_id = lsync.get_library_folder_id(library_id, child_folder)
+            if ldda_id is None:
+                new_ent = lsync.library_make_folder(library_folder_id, dir_name)
+            sync_dir(lsync, api_key, api_url, file_path, library_id, child_folder)
+
 def main(api_key, api_url, data_dir, data_library ):
     remote_galaxy = RemoteGalaxy(api_url, api_key)
     lsync = LibrarySync(remote_galaxy, data_library )
     library_id = lsync.get_library_id(data_library)
-    library_folder_id = lsync.get_library_folder_id(library_id, "/")
-    for file_path in glob( os.path.join(os.path.abspath(data_dir), "*") ):
-        if os.path.isfile(file_path):
-            dataset_name = os.path.basename(file_path)
-            ldda_id = lsync.get_library_dataset_id(library_id, "/", dataset_name)
-            if ldda_id is None:
-                new_ent = lsync.library_paste_file(library_folder_id, dataset_name, file_path)
-                print new_ent
+    sync_dir(lsync, api_key, api_url, data_dir, library_id, "/")
 
 if __name__ == '__main__':
     parser = argparse.ArgumentParser()
