--- a/roles/dream-smc-client/templates/dream_submit_supervisor.conf.j2
+++ b/roles/dream-smc-client/templates/dream_submit_supervisor.conf.j2
@@ -1,5 +1,5 @@
 [program:dream_submit_server]
-command         = /opt/galaxy/SMC-Het-Challenge/dream_galaxy_server.py --port {{ dream_submit_port }} --keyfile /home/{{ galaxy_user_name }}/.galaxy_key
+command         = /bin/bash -c 'export HOME=/home/{{ galaxy_user_name }}; export PATH=$PATH:/home/{{ galaxy_user_name }}/.linuxbrew/bin/; /opt/galaxy/SMC-Het-Challenge/dream_galaxy_server.py --port {{ dream_submit_port }} --keyfile /home/{{ galaxy_user_name }}/.galaxy_key'
 autostart       = true
 autorestart     = true
 user            = {{ galaxy_user_name }}
